# Duliu

./: .env.example  .gitattributes  .gitignore  PLAN.md  README.md  TECHNICAL.md  docker-compose.m1.yml  docker-compose.yml  pyproject.toml  requirements.txt
config/: agents.llm.yaml.example
docker/: Dockerfile.api  Dockerfile.m1  Dockerfile.worker  entrypoint-m1.sh  install-runner-deps.sh
docs/: M1-COMPLETE.md  M1-quickstart.md  M10-COMPLETE.md  M11-COMPLETE.md  M12-COMPLETE.md  M13-COMPLETE.md  M14-COMPLETE.md  M15-COMPLETE.md  M16-COMPLETE.md  M17-COMPLETE.md  M18-COMPLETE.md  M19-COMPLETE.md  M2-COMPLETE.md  M20-COMPLETE.md  M21-COMPLETE.md  M3-COMPLETE.md  M4-COMPLETE.md  M5-COMPLETE.md  M6-COMPLETE.md  M7-COMPLETE.md  M8-COMPLETE.md  M9-COMPLETE.md  agents.yaml  architecture-runtime.md  data-model.md  decisions.md  docker-troubleshooting.md  hitl-cli.md  hitl-web.md  ide-workflow.md  integrations.md  non-original-workflow.md  polygon.md  problem-creation-workflow.md  stages.yaml  web-editor-and-sandbox.md  workflow_icpc.yaml  workflow_oi.yaml  wsl-windows.md
mcp/duliu-mcp/: .env.example  README.md  pyproject.toml
mcp/duliu-mcp/examples/: cursor-mcp.json
mcp/duliu-mcp/src/duliu_mcp/: __init__.py  __main__.py  config.py  server.py
mcp/duliu-mcp/src/duliu_mcp/client/: __init__.py  duliu_api.py
mcp/duliu-mcp/src/duliu_mcp/schemas/: __init__.py  tool_inputs.py
mcp/duliu-mcp/src/duliu_mcp/services/: __init__.py  polygon_exporter.py
mcp/duliu-mcp/src/duliu_mcp/tools/: __init__.py  artifacts.py  export_data.py  problems.py  registry.py
mcp/duliu-mcp/tests/: test_polygon_exporter.py
schemas/: contest.yaml.schema  spec.yaml.schema
scripts/: install-docker-desktop.ps1  m1-dev-local.sh  m1-smoke-test.sh  wsl-duliu-up.sh  (+22 more)
(+2 files in other folders)
