[project]
name = "duliu"
version = "0.1.0"
description = "Duliu — algorithmic problem authoring agent system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.scripts]
duliu-api = "duliu.api.main:run"
duliu-worker = "duliu.worker.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/duliu"]

[tool.hatch.build.targets.sdist]
packages = ["packages/duliu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
