[project]
name = "duliu-mcp"
version = "0.1.0"
description = "Duliu MCP server — tools for problem data export and authoring workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.9.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.scripts]
duliu-mcp = "duliu_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duliu_mcp"]

[tool.hatch.build.targets.sdist]
packages = ["src/duliu_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
